@@ -39,76 +39,117 @@ import org.kuali.student.common.ui.client.service.BaseDataOrchestrationRpcServic
 import org.kuali.student.common.ui.client.service.DataSaveResult;
 import org.kuali.student.common.ui.client.service.exceptions.OperationFailedException;
 import org.kuali.student.common.util.security.SecurityUtils;
-import org.kuali.student.core.assembly.Assembler;
-import org.kuali.student.core.assembly.data.AssemblyException;
 import org.kuali.student.core.assembly.data.Data;
 import org.kuali.student.core.assembly.data.Metadata;
-import org.kuali.student.core.assembly.data.SaveResult;
+import org.kuali.student.core.assembly.transform.AuthorizationFilter;
+import org.kuali.student.core.assembly.transform.MetadataFilter;
+import org.kuali.student.core.assembly.transform.TransformationManager;
+import org.kuali.student.core.assembly.transform.WorkflowFilter;
+import org.kuali.student.core.exceptions.DataValidationErrorException;
 import org.kuali.student.core.rice.StudentIdentityConstants;
 import org.kuali.student.core.rice.authorization.PermissionType;
-import org.kuali.student.core.validation.dto.ValidationResultInfo;
-import org.kuali.student.core.validation.dto.ValidationResultInfo.ErrorLevel;
 
 import com.google.gwt.user.server.rpc.RemoteServiceServlet;
 
 /**
- * Generic implementation of data orchestration calls and workflow calls
+ * Generic implementation of data gwt data operations calls and workflow operations
  *
  */
 public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteServiceServlet implements BaseDataOrchestrationRpcService {
-	//FIXME issues:
-	// -The Type/state config is hardcoded here which will cause troubles with different types and states
-	// -Workflow filter should be combined with this for save
-	// -The exception handling here needs standardization.  Should RPC errors throw operation failed with just the message and log the message and exception?
-	// also should calls that return Boolean ever throw exceptions?
-	
-	private static final long serialVersionUID = 1L;
-	
-	final Logger LOG = Logger.getLogger(AbstractBaseDataOrchestrationRpcGwtServlet.class);
-	
-	private Assembler<Data, Void> assembler;
 
-    private SimpleDocumentActionsWebService simpleDocService;
+	private static final long serialVersionUID = 1L;
+
+	final Logger LOG = Logger.getLogger(AbstractBaseDataOrchestrationRpcGwtServlet.class);
+
+	private TransformationManager transformationManager;
+	
+	private SimpleDocumentActionsWebService simpleDocService;
     private WorkflowUtility workflowUtilityService;
-	private PermissionService permissionService;
 	private IdentityService identityService;
+	private PermissionService permissionService;
+
+	public Map<String,String> getDefaultFilterProperties(){
+		Map<String, String> filterProperties = new HashMap<String,String>();
+		filterProperties.put(MetadataFilter.METADATA_ID_TYPE, StudentIdentityConstants.QUALIFICATION_KEW_OBJECT_ID);
+		filterProperties.put(WorkflowFilter.WORKFLOW_USER, getCurrentUser());
+		
+		return filterProperties;
+	}
 	
 	@Override
-	public Data getData(String dataId) {
+	public Data getData(String id) {
+		Map<String, String> filterProperties = getDefaultFilterProperties();
+		filterProperties.put(MetadataFilter.METADATA_ID_VALUE, id);
+		
 		try {
-			return assembler.get(dataId);
-		} catch (AssemblyException e) {
-			LOG.error("Error getting Data.",e);
+			Object dto = get(id);
+			if (dto != null){
+				return transformationManager.transform(dto, filterProperties);
+			}
+		} catch (Exception e){
+			LOG.error("Error getting Data.",e);			
 		}
+		
 		return null;
 	}
 
 	@Override
 	public Metadata getMetadata(String idType, String id) {
-
-		try {
-		    //FIXME: should not pass empty id. What to do here?
-			return assembler.getMetadata(idType, id, getDefaultMetaDataType(), getDefaultMetaDataState());
-		} catch (AssemblyException e) {
-			LOG.error("Error getting Metadata.",e);
+		Map<String, String> filterProperties = getDefaultFilterProperties();
+		
+		if (idType != null){
+			filterProperties.remove(MetadataFilter.METADATA_ID_TYPE);
 		}
-		return null;
+		filterProperties.put(MetadataFilter.METADATA_ID_VALUE, id);
+		filterProperties.put(WorkflowFilter.WORKFLOW_DOC_TYPE, getDefaultWorkflowDocumentType());
+		if (checkDocumentLevelPermissions()){
+			filterProperties.put(AuthorizationFilter.DOC_LEVEL_PERM_CHECK, Boolean.TRUE.toString());
+		}
+		
+		try {
+			Metadata metadata = transformationManager.getMetadata(getDtoClass().getName(), filterProperties); 
+			return metadata;
+		} catch (Exception e) {
+			throw new RuntimeException("Failed to get metadata");
+		}		
 	}
 
 	@Override
 	public DataSaveResult saveData(Data data) throws OperationFailedException {
+		Map<String, String> filterProperties = getDefaultFilterProperties();
+		filterProperties.put(MetadataFilter.METADATA_ID_VALUE, (String)data.query("proposalId"));
+
 		try {
-			SaveResult<Data> saveResult = assembler.save(data);
-			if (saveResult != null) {
-				return new DataSaveResult(saveResult.getValidationResults(), saveResult.getValue());
-			}
+			Object dto = transformationManager.transform(data, getDtoClass(), filterProperties);
+			dto = save(dto);
+				
+			Data persistedData = transformationManager.transform(dto, filterProperties);
+			return new DataSaveResult(null, persistedData);
+		} catch (DataValidationErrorException dvee){
+			return new DataSaveResult(dvee.getValidationResults(), null);
 		} catch (Exception e) {
 			LOG.error("Unable to save", e);
 			throw new OperationFailedException("Unable to save");
 		}
-		return null;
 	}
 
+	protected DataSaveResult _saveData(Data data, Map<String,String> filterProperties) throws OperationFailedException{
+		try {
+			filterProperties.put(MetadataFilter.METADATA_ID_VALUE, (String)data.query("id"));	
+
+			Object dto = transformationManager.transform(data, getDtoClass(),filterProperties);
+			dto = save(dto);
+				
+			Data persistedData = transformationManager.transform(dto,filterProperties);
+			return new DataSaveResult(null, persistedData);
+		} catch (DataValidationErrorException dvee){
+			return new DataSaveResult(dvee.getValidationResults(), null);
+		} catch (Exception e) {
+			LOG.error("Unable to save", e);
+			throw new OperationFailedException("Unable to save");
+		}		
+	}
+	
 	@Override
 	public Boolean acknowledgeDocumentWithId(String dataId) throws OperationFailedException {
 		if(simpleDocService==null){
@@ -125,7 +166,7 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
             if(docDetail==null){
             	throw new OperationFailedException("Error found gettting document. " );
             }
-            
+
 	        String acknowledgeComment = "Acknowledged";
 
 	        StandardResponse stdResp = simpleDocService.acknowledge(docDetail.getRouteHeaderId().toString(), username, acknowledgeComment);
@@ -135,9 +176,10 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
         	}
 
 		}catch(Exception e){
-            e.printStackTrace();
+            LOG.error("Error acknowledging Document with dataId:"+dataId,e);
+            throw new OperationFailedException("Could not acknowledge");
 		}
-        return new Boolean(true);
+        return Boolean.valueOf(true);
 	}
 
 	@Override
@@ -150,11 +192,11 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
         try {
             //Get a user name
             String username = getCurrentUser();
-            
+
             String fyiAnnotation = "FYI";
             String approveAnnotation = "Approve";
             String ackAnnotation = "Ack";
-            
+
             if (RequestType.FYI.equals(requestType)) {
                 StandardResponse stdResp = simpleDocService.requestAdHocFyiToPrincipal(docId,recipientPrincipalId, username, fyiAnnotation);
                 if (stdResp == null || StringUtils.isNotBlank(stdResp.getErrorMessage())) {
@@ -176,42 +218,23 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 
         } catch (Exception e) {
             LOG.error("Error adhoc routing",e);
-            return new Boolean(false);
+            throw new OperationFailedException("Could not adhoc route");
         }
-        return new Boolean(true);
+        return  Boolean.valueOf(true);
 	}
 
 	@Override
 	public DataSaveResult approveDocumentWithData(Data data) throws OperationFailedException {
-		//First Save
-		DataSaveResult saveResult = saveData(data);
-		if(isValid(saveResult)){
-			try{
-	            //get a user name
-	            String username = getCurrentUser();
-	            
-	            //Lookup the workflowId from the cluId
-	            DocumentDetailDTO docDetail = workflowUtilityService.getDocumentDetailFromAppId(getDefaultWorkflowDocumentType(), deriveAppIdFromData(data));
-	            if(docDetail==null){
-	            	throw new OperationFailedException("Error found getting document. " );
-	            }
-	            
-		        StandardResponse stdResp = simpleDocService.approve(docDetail.getRouteHeaderId().toString(), username, docDetail.getDocTitle(), deriveDocContentFromData(data), "");
-	            if(stdResp==null||StringUtils.isNotBlank(stdResp.getErrorMessage())){
-	        		throw new OperationFailedException("Error found approving document: " + stdResp.getErrorMessage());
-	        	}
-
-			}catch(Exception e){
-	            LOG.error("Could not approve document",e);
-	            throw new OperationFailedException("Could not approve document");
-			}
-		}
-		return saveResult;
+		Map<String,String> filterProperties = getDefaultFilterProperties();
+	
+		filterProperties.put(WorkflowFilter.WORKFLOW_ACTION, WorkflowFilter.WORKFLOW_APPROVE);
+		
+		return _saveData(data,filterProperties);
 	}
 
 	@Override
 	public Boolean approveDocumentWithId(String dataId) throws OperationFailedException {
-      
+
         if(simpleDocService==null){
         	throw new OperationFailedException("Workflow Service is unavailable");
         }
@@ -219,16 +242,16 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 		try{
             //get a user name
             String username = getCurrentUser();
-            
+
             //Lookup the workflowId from the id
             DocumentDetailDTO docDetail = workflowUtilityService.getDocumentDetailFromAppId(getDefaultWorkflowDocumentType(), dataId);
-			DocumentContentDTO docContent = workflowUtilityService.getDocumentContent(Long.parseLong(docDetail.getAppDocId()));
             if(docDetail==null){
             	throw new OperationFailedException("Error found getting document. " );
             }
-            
+            DocumentContentDTO docContent = workflowUtilityService.getDocumentContent(Long.parseLong(docDetail.getAppDocId()));
+
 	        String approveComment = "Approved";
-	        
+
 	        StandardResponse stdResp = simpleDocService.approve(docDetail.getRouteHeaderId().toString(), username, docDetail.getDocTitle(), docContent.getApplicationContent(), approveComment);
             if(stdResp==null||StringUtils.isNotBlank(stdResp.getErrorMessage())){
         		throw new OperationFailedException("Error found approving document: " + stdResp.getErrorMessage());
@@ -298,11 +321,12 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
         }
 
 		try{
-			DocumentDetailDTO docDetail = workflowUtilityService.getDocumentDetailFromAppId(getDefaultWorkflowDocumentType(), dataId);
 			KimPrincipalInfo principal = getIdentityService().getPrincipalByPrincipalName(StudentIdentityConstants.SYSTEM_USER_PRINCIPAL_NAME);
 			if (principal == null) {
 				throw new RuntimeException("Cannot find principal for system user principal name: " + StudentIdentityConstants.SYSTEM_USER_PRINCIPAL_NAME);
 			}
+			
+//			DocumentDetailDTO docDetail = workflowUtilityService.getDocumentDetailFromAppId(getDefaultWorkflowDocumentType(), dataId);
 //	        StandardResponse stdResp = simpleDocService.superUserDisapprove(docDetail.getRouteHeaderId().toString(), principal.getPrincipalId(), "");
 //	        if(stdResp==null||StringUtils.isNotBlank(stdResp.getErrorMessage())) {
 //        		LOG.error("Error withdrawing document: " + stdResp.getErrorMessage());
@@ -335,7 +359,7 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
             if(docDetail==null){
             	throw new OperationFailedException("Error found gettting document. " );
             }
-            
+
     		//Build up a string of actions requested from the attribute set.  The actions can be S, F,A,C,K. examples are "A" "AF" "FCK" "SCA"
             LOG.debug("Calling action requested with user:"+principalId+" and docId:"+docDetail.getRouteHeaderId());
 
@@ -347,27 +371,28 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
             	}
             }
 
-            String actionsRequested = "";
+            //Use StringBuilder to avoid using string concatenations in the for loop.
+            StringBuilder actionsRequestedBuffer = new StringBuilder();
 
             String documentStatus = workflowUtilityService.getDocumentStatus(docDetail.getRouteHeaderId());
-            
+
             for(Map.Entry<String,String> entry:results.entrySet()){
             	// if saved or initiated status... must show only 'complete' button
             	if (KEWConstants.ROUTE_HEADER_SAVED_CD.equals(documentStatus) || KEWConstants.ROUTE_HEADER_INITIATED_CD.equals(documentStatus)) {
             		// show only complete button if complete or approve code in this doc status
             		if ( (KEWConstants.ACTION_REQUEST_COMPLETE_REQ.equals(entry.getKey()) || KEWConstants.ACTION_REQUEST_APPROVE_REQ.equals(entry.getKey())) && ("true".equals(entry.getValue())) ) {
-            			actionsRequested+="S";
+            			actionsRequestedBuffer.append("S");
             		}
             		// if not Complete or Approve code then show the standard buttons
             		else {
     	            	if("true".equals(entry.getValue())){
-    	            		actionsRequested+=entry.getKey();
+    	            		actionsRequestedBuffer.append(entry.getKey());
     	            	}
             		}
             	}
             	else {
                 	if("true".equals(entry.getValue())){
-                		actionsRequested+=entry.getKey();
+                		actionsRequestedBuffer.append(entry.getKey());
                 	}
             	}
             }
@@ -375,10 +400,10 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
             // if user can withdraw document then add withdraw button
             if (getPermissionService().isAuthorizedByTemplateName(principalId, PermissionType.ADD_ADHOC_REVIEWER.getPermissionNamespace(), PermissionType.ADD_ADHOC_REVIEWER.getPermissionTemplateName(), null, new AttributeSet(KimAttributes.DOCUMENT_NUMBER,docDetail.getRouteHeaderId().toString()))) {
             	LOG.info("User '" + principalId + "' is allowed to Withdraw the Document");
-//            	actionsRequested+="W";
+//            	actionsRequestedBuffer.append("W");
             }
 
-            return actionsRequested;
+            return actionsRequestedBuffer.toString();
         } catch (Exception e) {
         	LOG.error("Error getting actions Requested",e);
             throw new OperationFailedException("Error getting actions Requested");
@@ -405,13 +430,13 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 			throws OperationFailedException {
 		if (workflowId != null && !workflowId.isEmpty()){
 			try {
-				Long documentId = Long.valueOf(workflowId); 
+				Long documentId = Long.valueOf(workflowId);
 				return workflowUtilityService.getDocumentStatus(documentId);
 			} catch (Exception e) {
 				throw new OperationFailedException("Error getting document status. " + e.getMessage());
-			}	
+			}
 		}
-		
+
 		return null;
 	}
 
@@ -435,62 +460,34 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 		}
 		return null;
 	}
-	
+
 	@Override
 	public List<String> getWorkflowNodes(String workflowId)
 			throws OperationFailedException {
 		List<String> routeNodeNames = new ArrayList<String>();
-		
+
 		Long documentId = Long.valueOf(workflowId);
 		try{
 			RouteNodeInstanceDTO[] routeNodes = workflowUtilityService.getActiveNodeInstances(documentId);
 			if (routeNodes != null){
 				for (RouteNodeInstanceDTO routeNodeInstanceDTO : routeNodes) {
-					routeNodeNames.add(routeNodeInstanceDTO.getName());										
+					routeNodeNames.add(routeNodeInstanceDTO.getName());
 				}
 			}
-			
+
 		} catch (Exception e) {
 			throw new OperationFailedException(e.getMessage());
 		}
-		
+
 		return routeNodeNames;
 	}
 
 	@Override
 	public DataSaveResult submitDocumentWithData(Data data) throws OperationFailedException {
-		//First Save
-		DataSaveResult saveResult = saveData(data);
-		if(isValid(saveResult)){
-			try {
-	            if(simpleDocService==null){
-	            	throw new OperationFailedException("Workflow Service is unavailable");
-	            }
+		Map<String,String> filterProperties = getDefaultFilterProperties();
+		filterProperties.put(WorkflowFilter.WORKFLOW_ACTION, WorkflowFilter.WORKFLOW_SUBMIT);
 
-	            //get a user name
-	            String username = getCurrentUser();
-
-	            //Get the workflow ID
-	            DocumentDetailDTO docDetail = workflowUtilityService.getDocumentDetailFromAppId(getDefaultWorkflowDocumentType(), deriveAppIdFromData(data));
-
-	            if(docDetail==null){
-	            	throw new OperationFailedException("Error found getting document. " );
-	            }
-
-	            String routeComment = "Routed";
-
-	            StandardResponse stdResp = simpleDocService.route(docDetail.getRouteHeaderId().toString(), username, docDetail.getDocTitle(), deriveDocContentFromData(data), routeComment);
-
-	            if(stdResp==null||StringUtils.isNotBlank(stdResp.getErrorMessage())){
-	        		throw new OperationFailedException("Error found routing document: " + stdResp.getErrorMessage());
-	        	}
-
-	        } catch (Exception e) {
-	            LOG.error("Error found routing document",e);
-	            throw new OperationFailedException("Error found routing document");
-	        }
-		}
-		return saveResult;
+		return _saveData(data,filterProperties);
 	}
 
 	@Override
@@ -505,11 +502,10 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 
             //Get the workflow ID
             DocumentDetailDTO docDetail = workflowUtilityService.getDocumentDetailFromAppId(getDefaultWorkflowDocumentType(), dataId);
-            DocumentContentDTO docContent = workflowUtilityService.getDocumentContent(Long.parseLong(docDetail.getAppDocId()));
-            
             if(docDetail==null){
             	throw new OperationFailedException("Error found getting document. " );
             }
+            DocumentContentDTO docContent = workflowUtilityService.getDocumentContent(Long.parseLong(docDetail.getAppDocId()));
 
             String routeComment = "Routed";
 
@@ -533,16 +529,6 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 			username=(String)this.getThreadLocalRequest().getSession().getAttribute("backdoorId");
         }
 		return username;
-	}
-	private boolean isValid(DataSaveResult saveResult) {
-		if(saveResult.getValidationResults()!=null){
-			for(ValidationResultInfo validationResult:saveResult.getValidationResults()){
-				if(ErrorLevel.ERROR.equals(validationResult.getLevel())){
-					return false;
-				}
-			}
-		}
-		return true;
 	}
 
 	protected boolean checkDocumentLevelPermissions() {
@@ -579,25 +565,6 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 		return Boolean.valueOf(result);
 	}
 
-	protected abstract String deriveAppIdFromData(Data data);
-	protected abstract String deriveDocContentFromData(Data data);
-	protected abstract String getDefaultWorkflowDocumentType();
-	protected abstract String getDefaultMetaDataState();
-	protected abstract String getDefaultMetaDataType();
-	
-	//POJO methods
-	public void setAssembler(Assembler<Data, Void> assembler) {
-		this.assembler = assembler;
-	}
-
-	public PermissionService getPermissionService() {
-        return permissionService;
-    }
-
-    public void setPermissionService(PermissionService permissionService) {
-        this.permissionService = permissionService;
-    }
-
 	public IdentityService getIdentityService() {
     	return identityService;
     }
@@ -614,10 +581,6 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 		this.workflowUtilityService = workflowUtilityService;
 	}
 
-	protected Assembler<Data, Void> getAssembler() {
-		return assembler;
-	}
-
 	protected SimpleDocumentActionsWebService getSimpleDocService() {
 		return simpleDocService;
 	}
@@ -626,5 +589,29 @@ public abstract class AbstractBaseDataOrchestrationRpcGwtServlet extends RemoteS
 		return workflowUtilityService;
 	}
 
+	public TransformationManager getTransformationManager() {
+		return transformationManager;
+	}
 
+	public void setTransformationManager(TransformationManager transformationManager) {
+		this.transformationManager = transformationManager;
+	}
+
+	public PermissionService getPermissionService() {
+		return permissionService;
+	}
+
+	public void setPermissionService(PermissionService permissionService) {
+		this.permissionService = permissionService;
+	}
+
+	protected abstract String getDefaultWorkflowDocumentType();
+	
+	protected abstract String getDefaultMetaDataState();
+	
+	protected abstract Object get(String id) throws Exception;
+	
+	protected abstract Object save(Object dto) throws Exception;
+	
+	protected abstract Class<?> getDtoClass();
 }
